--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -11,6 +11,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Your ML workflow goes here
+          /usr/bin/python3 -m pip install --upgrade pip
           pip install -r requirements.txt
           python code/featurization.py
           python code/train_model.py
