--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-cycler==0.11.0
-future==0.18.2
-joblib==1.1.0
-kiwisolver==1.3.1
-matplotlib==3.4.3
-numpy==1.21.2
-pandas==1.3.3
-Pillow==8.3.2
-pyparsing==3.0.4
-python-dateutil==2.8.2
-pytz==2021.3
-scikit-learn==1.0
-scipy==1.7.1
-seaborn==0.11.2
-six==1.16.0
-threadpoolctl==3.0.0
-torch==1.9.1
-torchaudio==0.9.1
-torchvision==0.10.1
-typing-extensions==3.10.0.2
+cycler<=0.11.0
+future<=0.18.2
+joblib<=1.1.0
+kiwisolver<=1.3.1
+matplotlib<=3.4.3
+numpy<=1.21.2
+pandas<=1.3.3
+Pillow<=8.3.2
+pyparsing<=3.0.4
+python-dateutil<=2.8.2
+pytz<=2021.3
+scikit-learn<=1.0
+scipy<=1.7.1
+seaborn<=0.11.2
+six<=1.16.0
+threadpoolctl<=3.0.0
+torch<=1.9.1
+torchaudio<=0.9.1
+torchvision<=0.10.1
+typing-extensions<=3.10.0.2
