--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+certifi<=2021.10.8
+charset-normalizer<=2.0.7
 cycler<=0.11.0
 future<=0.18.2
+idna<=3.3
 joblib<=1.1.0
-kiwisolver<=1.3.1
+kiwisolver<=1.3.2
 matplotlib<=3.4.3
 numpy<=1.21.2
 pandas<=1.3.3
@@ -9,6 +12,7 @@ Pillow<=8.3.2
 pyparsing<=3.0.4
 python-dateutil<=2.8.2
 pytz<=2021.3
+requests<=2.26.0
 scikit-learn<=1.0
 scipy<=1.7.1
 seaborn<=0.11.2
@@ -18,3 +22,4 @@ torch<=1.9.1
 torchaudio<=0.9.1
 torchvision<=0.10.1
 typing-extensions<=3.10.0.2
+urllib3<=1.26.7
